assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans&display=swap');

* {
    margin: 0;
    font-family: 'Montserrat', Open-Sans;
}

body {
    display: flex;
    flex-direction: column;
}

header {
    height: 20%;
    padding: 10px;
}

main {
    height: 90%;
}

footer {
    height: 10%;
}

/* home page */

#navbar img {
    height: 80px;
    float: left;
    padding: 0.5rem 0.5rem;
}

#navbar {
    text-align: center;
}

#navbar a {
    float: right;
    top: 15px;
    color: #f2f2f2;
    position:relative;
    padding: 20px 60px;
    text-decoration: none;
    font-size: auto;
    background-color:hsl(27, 98%, 52%);
}

#navbar a:hover {
    background-color: rgb(245, 194, 164);
    color: black;
}

#navbar a.active {
    background-color: gray;
}

#bgimage {
    background: url('../images/photo21.jpg');
    background-size: cover;
    background-position: center;
    height: 100vh;
}

h1 {
    font-size: 2rem;
    padding-top: 2rem;
    padding-left: 3rem;
}

.join-us {
    color:gray;
    text-align: left;
}

#linktoevents {
    font-size: 1.5rem;
    text-decoration: transparent;
    color: gray;
    padding-left: 3rem;
}

#container {
    display: flex;
    justify-content: space-around;
    margin-top: 0;
}

#container .info {
    background-color: hsl(27, 98%, 52%);
    text-align:center;
    color: white;
    border: transparent;
    float: none;
}

#container .info:hover {
    color: white
}

#containerfooter {
    text-align: center;
    text-decoration: none;
    height: auto;
    padding: 0.5rem;
    margin-bottom: 0;
    background-color: hsl(27, 98%, 52%);
}

.item1 img {
    height: 300px;
    padding-top: 5px;
}

.item2 img {
    height: 300px;
    padding-top: 5px;
}

.item3 img {
    height: 300px;
    padding-top: 5px;
}

.item4 img {
    height: 300px;
    padding-top: 5px;
}

#linktotop {
    font-size: 20px;
    color: gray;
    text-decoration: none;
    text-align: center;
}

#linktotop:hover {
    color: black;
    font-size: 20px;
    border-radius: 40%;
}

/* footer */

.footer-links a {
    text-align: center;
}

.footer-links li {
    display: inline;
}

.footer-links i {
    font-size: 200%;
    margin: 5%;
    color: rgb(221, 93, 8);
}

.copyright i:hover {
    color: blue;
}

.twitter i:hover {
    color: rgb(29,161,242);
}

.facebook i:hover {
    color: rgb(66,103,178);
}

.instagram i:hover {
    color: rgb(138, 58, 185);
}


/* login page form styling - Love Running Sample - with minor changes*/

.form-section1 {
    clear:left;
    background: url('../images/photo28.jpg');
    background-size: cover;
    background-position: center;
    height: 80vh;
}

.login-form {
    margin: 150px 10% 0 0;
    color: rgb(221, 93, 8);
    background: transparent;
    max-width: 400px;
    position:absolute;
    padding-left: 5rem;
}

.login-form h2 {
    color: rgb(221, 93, 8);
    margin-bottom: 20px;
}

.text-input {
    background: transparent;
    width: 100%;
    height: 25px;
    margin: 5px 0 20px 0;
    border: 1px solid rgb(221, 93, 8);
    border-radius: 5px;
}

.text-input:hover {
    border-color: blue;
}

#email:focus {
    background: white;
    color: black;
}

#password:focus {
    background: white;
    color: black;
}

.kickstart-button {
    border-radius: 5%;
    margin-top: 10px;
    margin-bottom: 10px;
    text-align: center;
    font-size: 100%;
    background-color: rgb(248, 105, 10);
    box-shadow: green;
    color:rgb(44, 43, 43);
    display: block;
}

.kickstart-button:hover {
    background-color: white;
}

.clear-button {
    top: 10px;
    color: red;
}


/* about us page styling */

#aboutuspage {
    width: 40%;
    height: auto;
    padding-top: 4rem;
    padding-left: 3rem;
    display: inline-block;
}

#aboutuspage h2 {
    color: rgb(221, 93, 8);
}

#aboutuspage p {
    text-align: justify;
    color: gray;
}

#aboutusimg {
    display: inline-block;
    width: 50%;
    text-align: center;
}

/* Contact Us page Styling */

.form-section2 h2 {
    color: rgb(221, 93, 8);
    width: 100%;
}

#email:focus {
    background: white;
    color: black;
}

#phone:focus {
    background: white;
    color: black;
}

.form-section3 {
    padding-top: 5rem;
    display: inline-block;
}

#query {
    background: transparent;
    width: 100%;
}

#query:focus {
    display: block;
    background: white;
}

.form-section2 {
    clear:left;
    background: url('../images/photo4.jpg');
    background-size: cover;
    background-position: center;
    height: 100vh;
}

/* Confirmation Page Styling */

.message1 h2{
    text-align: center;
    color: rgb(221, 93, 8);
    padding-top: 150px;
}

.message1 h3{
    text-align: center;
    color: gray;
    padding-top: 150px;
}

.backtohome {
    text-align: center;
    padding-top: 200px;
}

/* media query for logos w3schools.com */

@media only screen and (max-width: 1300px) {
    #navbar img {
        content:url('../images/motorbikebuddy-logo2.jpg');
        text-align: center;
        padding: 0.5rem 0.5rem;
    }
}

/* media query for navbar - w3schools.com */

@media only screen and (max-width: 1300px) {
    #navbar a {
        width: 50%;
        position: static;
        position: inline-block;
        padding: 0.5rem;
    }
}
/* ... */

